syntax = "proto3";

option go_package = "github.com/YukiOnishi1129/techpicks/favorite";

package checkpicks.favorite.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service FavoriteService {
    rpc GetFavoriteArticleFolderByArticleId(GetFavoriteArticleFolderByArticleIdRequest) returns (GetFavoriteArticleFolderResponse);
}

message GetFavoriteArticleFolderResponse {
    FavoriteArticleFolder favorite_article_folder = 1;
}

message GetFavoriteArticleFolderByArticleIdRequest {
    string article_id = 1;
}

message FavoriteArticle {
    string id = 1;
    string article_id = 2;
    google.protobuf.StringValue platform_id = 3;
    string favorite_article_folder_id = 4;
    string user_id = 5;
    string title = 6;
    string thumbnail_url = 7;
    string article_url = 8;
    string platform_favicon_url = 9;
    google.protobuf.Timestamp published_at = 10;
    google.protobuf.StringValue author_name = 11;
    google.protobuf.StringValue tags = 12;
    string platform_name = 13;
    string platform_url = 14;
    bool is_eng = 15;
    bool is_private = 16;
    bool is_read = 17;
    google.protobuf.Timestamp created_at = 18;
    google.protobuf.Timestamp updated_at = 19;
}

message FavoriteArticleFolder {
    string id = 1;
    string user_id = 2;
    string title = 3;
    string description = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}
